--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -41,7 +41,7 @@
               {{! no piece.created in legacy data }}
               {{#if this.piece.created}}
                 <p data-test-document-card-primary-source-created={{if this.piece.file.derived ""}}>
-                  {{t "uploaded-at"}}
+                  {{t this.label}}
                   {{datetime-at this.piece.created}}
                   {{#if (and this.piece.file.derived (await (this.canViewConfidentialPiece)))}}
                     {{t "as"}}
