KAS-4027 user fieldset to wrap radiogroup, add same functionality to download decisions

--- a/app/components/agenda/agenda-header/agenda-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-actions.hbs
@@ -243,21 +243,25 @@
       @referenceAgenda={{@currentAgenda}}
       @onChange={{set this "selectedMandatees"}}
     />
-    <Auk::Label>{{t "file-types"}}</Auk::Label>
-    <AuRadioGroup
-      @alignment="inline"
-      @selected={{this.selectedDownloadOption}}
-      @onChange={{this.onChangeDownloadOption}}
-      as |Group|
-    >
-      {{#each this.downloadOptions as |option|}}
-      <Group.Radio
-        @value={{option.value}}
+    <AuFieldset as |Fieldset|>
+      <Fieldset.legend>{{t "file-types"}}</Fieldset.legend>
+      <Fieldset.content>
+        <AuRadioGroup
+          @alignment="inline"
+          @selected={{this.selectedDownloadOption}}
+          @onChange={{this.onChangeDownloadOption}}
+          as |Group|
         >
-        {{option.label}}
-      </Group.Radio>
-      {{/each}}
-    </AuRadioGroup>
+          {{#each this.downloadOptions as |option|}}
+          <Group.Radio
+            @value={{option.value}}
+            >
+            {{option.label}}
+          </Group.Radio>
+          {{/each}}
+        </AuRadioGroup>
+      </Fieldset.content>
+    </AuFieldset>
   </:body>
 </ConfirmationModal>
 
@@ -280,5 +284,24 @@
       @referenceAgenda={{@currentAgenda}}
       @onChange={{set this "selectedMandatees"}}
     />
+    <AuFieldset as |Fieldset|>
+      <Fieldset.legend>{{t "file-types"}}</Fieldset.legend>
+      <Fieldset.content>
+        <AuRadioGroup
+          @alignment="inline"
+          @selected={{this.selectedDownloadOption}}
+          @onChange={{this.onChangeDownloadOption}}
+          as |Group|
+        >
+          {{#each this.downloadOptions as |option|}}
+          <Group.Radio
+            @value={{option.value}}
+            >
+            {{option.label}}
+          </Group.Radio>
+          {{/each}}
+        </AuRadioGroup>
+      </Fieldset.content>
+    </AuFieldset>
   </:body>
 </ConfirmationModal>
