fix: add correct capitalization

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -101,7 +101,7 @@
           @onPiecePartVersionClicked={{this.setBetreftEditorContent}}
           @onUpdateContentClicked={{this.updateBetreftContent}}
         />
-        <h4 class="auk-h4 au-u-padding-top">{{t "decision"}}</h4>
+        <h4 class="auk-h4 au-u-padding-top">{{t "agendaitem-decision"}}</h4>
         <Agenda::Agendaitem::Decision::Editor
           @handleRdfaEditorInit={{this.handleRdfaEditorInitBeslissing}}
           @piecePart={{this.beslissingPiecePart}}
