feat: delete pieceParts when a report is deleted

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -138,9 +138,9 @@
       </Auk::Panel::Footer>
     {{else}}
       {{#if
-        (or
-          (and this.report.file (not this.report.pieceParts))
-          (not this.enableDigitalAgenda)
+        (and
+          this.report.file
+          (or (not this.report.pieceParts) (not this.enableDigitalAgenda))
         )
       }}
         <Auk::Panel::Body class="au-o-flow" @noPadding={{true}}>
