KAS-4067 Refactor copy-text instances

--- a/app/components/news-item/table-row.hbs
+++ b/app/components/news-item/table-row.hbs
@@ -66,7 +66,7 @@
         @icon="copy"
         @hideText={{true}}
         @disabled={{not @newsItem}}
-        {{on "click" (fn this.copyText @newsItem)}}
+        {{on "click" (fn this.copyItemText @newsItem)}}
       >
         {{t "copy"}}
       </AuButton>
