--- a/app/templates/newsletters/search.hbs
+++ b/app/templates/newsletters/search.hbs
@@ -133,7 +133,7 @@
                       @skin="naked"
                       @icon="copy"
                       @hideText={{true}}
-                      {{on "click" (fn this.copyText row)}}
+                      {{on "click" (fn this.copyItemText row)}}
                     >
                       {{t "copy"}}
                     </AuButton>
