KAS-4126 implement disabling button when data is loading

--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -42,6 +42,7 @@
         <Group>
           <AuButton
             @loading={{this.createSignFlow.isRunning}}
+            @disabled={{not this.signers.length}}
             {{on "click" this.createSignFlow.perform}}
           >
             {{t "start-signing"}}
