--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -54,8 +54,8 @@
                   {{on "click" this.updateEditorContent}}
                 >{{t "update-thing" thing=(t "content")}}</AuButton>
                 <VersionsDropdown
-                  @record={{this.model.minutes}}
-                  @previousVersionKey="previousPiece"
+                  @record={{this.currentPiecePart.value}}
+                  @previousVersionKey="previousPiecePart"
                   @onVersionClicked={{this.revertToVersion}}
                 />
               </:header>
@@ -91,7 +91,9 @@
           <Auk::Panel::Body
             class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
           >
-            {{#if this.currentPiecePart.value}}
+            {{#if this.currentPiecePart.isRunning}}
+              <Auk::Loader />
+            {{else if this.currentPiecePart.value}}
               <AuContent>
                 <SanitizeHtml
                   @raw={{true}}
