--- a/app/templates/search/error.hbs
+++ b/app/templates/search/error.hbs
@@ -1,1 +1,7 @@
-<Auk::Alert @skin="error" @message={{t "search-error"}} />
+<AuAlert
+  @skin="error"
+  @icon="circle-x"
+  @size="small"
+>
+  <p>{{t "search-error"}}</p>
+</AuAlert>
