--- a/app/components/search/minister-filter.hbs
+++ b/app/components/search/minister-filter.hbs
@@ -2,39 +2,41 @@
   <Auk::Loader />
 {{else}}
   <Auk::CheckboxTree
-    @label={{t "current-ministers"}}
+    @label={{t this.label}}
     @items={{this.currentMinisters}}
     @itemStructure={{hash label="fullName"}}
     @selectedItems={{this.selectedCurrentMinisters}}
     @didUpdate={{this.onChangeCurrentMinisters}}
   />
-  {{#if this.pastMinistersHidden}}
-    <AuButton
-      data-test-search-minister-filter-past-ministers
-      {{on "click" (toggle "pastMinistersHidden" this)}}
-      @skin="link"
-      class="au-u-h-functional au-u-padding-left-none au-u-margin-top-tiny"
-      @icon="add"
-    >
-      {{t "show-past-ministers"}}
-    </AuButton>
-  {{else if this.preparePastMinisters.isRunning}}
-    <Auk::Loader />
-  {{else}}
-    <Auk::CheckboxTree
-      @label={{t "past-ministers"}}
-      @items={{this.pastMinisters}}
-      @itemStructure={{hash label="fullName"}}
-      @selectedItems={{this.selectedPastMinisters}}
-      @didUpdate={{this.onChangePastMinisters}}
-    />
-    <AuButton
-      {{on "click" (toggle "pastMinistersHidden" this)}}
-      @skin="link"
-      class="au-u-h-functional au-u-padding-left-none au-u-margin-top-tiny"
-      @icon="remove"
-    >
-      {{t "hide-past-ministers"}}
-    </AuButton>
+  {{#if (not @hidePastMinistersOption)}}
+    {{#if this.pastMinistersHidden}}
+      <AuButton
+        data-test-search-minister-filter-past-ministers
+        {{on "click" (toggle "pastMinistersHidden" this)}}
+        @skin="link"
+        class="au-u-h-functional au-u-padding-left-none au-u-margin-top-tiny"
+        @icon="add"
+      >
+        {{t "show-past-ministers"}}
+      </AuButton>
+    {{else if this.preparePastMinisters.isRunning}}
+      <Auk::Loader />
+    {{else}}
+      <Auk::CheckboxTree
+        @label={{t "past-ministers"}}
+        @items={{this.pastMinisters}}
+        @itemStructure={{hash label="fullName"}}
+        @selectedItems={{this.selectedPastMinisters}}
+        @didUpdate={{this.onChangePastMinisters}}
+      />
+      <AuButton
+        {{on "click" (toggle "pastMinistersHidden" this)}}
+        @skin="link"
+        class="au-u-h-functional au-u-padding-left-none au-u-margin-top-tiny"
+        @icon="remove"
+      >
+        {{t "hide-past-ministers"}}
+      </AuButton>
+    {{/if}}
   {{/if}}
 {{/if}}
