uitgestelde agendapunten uitgrijzen in de zebra view van kort bestek

--- a/app/components/news-item/table-row.hbs
+++ b/app/components/news-item/table-row.hbs
@@ -1,4 +1,4 @@
-<tr data-test-table-row-news-item-row class="lt-row">
+<tr data-test-table-row-news-item-row class={{this.class}}>
   <td
     data-test-table-row-news-item-row-agendaitem-number
     class="lt-cell align-left"
