--- a/app/components/web-components/vl-rdfa-editor.hbs
+++ b/app/components/web-components/vl-rdfa-editor.hbs
@@ -22,6 +22,7 @@
           </Tb.Group>
           <Tb.Group>
             <Plugins::List::Unordered @controller={{this.controller}} />
+            <Plugins::List::Ordered @controller={{this.controller}} />
             <Plugins::List::IndentationControls
               @controller={{this.controller}}
             />
