--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -420,6 +420,26 @@ $au-button-height: 3.4rem;
   font-size: 1.5rem;
 }
 
+// Toaster
+
+.auk-alert-stack {
+  .au-c-alert__icon {
+    height: $au-unit - 0.1rem; // compensate for visual distortion of perfect circle
+    width: $au-unit;
+    margin-right: $au-unit * 0.5;
+  }
+
+  .au-c-icon {
+    height: $au-alert-small-icon-size - 0.1rem; // compensate for visual distortion of perfect circle
+    width: $au-alert-small-icon-size;
+  }
+
+  .au-c-alert__close {
+    align-self: center;
+    margin-left: 1.5rem;
+  }
+}
+
 // Additions
 
 .au-c-pill--blank {
